<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/backImage"
            android:layout_width="18dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/arrow_back" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_collection"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginStart="40dp"
            android:textSize="23sp" />

    </LinearLayout>

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="370dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/border"
        android:hint="@string/title"
        android:maxLength="20"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/light_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameEditText">

        <ImageView
            android:id="@+id/selectedIconImageView"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:src="@drawable/ico1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameEditText" />

        <Space
            android:layout_width="30dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/selectIconButton"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:text="@string/select_icon"
            android:textAllCaps="false"
            android:textColor="@color/blue_buttons"
            android:textSize="17sp"
            app:layout_constraintTop_toBottomOf="@+id/nameEditText"
            tools:ignore="MissingConstraints" />
    </LinearLayout>

    <Button
        android:id="@+id/createButton"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@drawable/button_border_blue"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>
