...
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginStart="70dp"
            android:textSize="23sp" />

        <Button
            android:id="@+id/createCollectionButton"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="35dp"
            android:layout_gravity="center"
            android:background="@drawable/plus" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/collectionsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/createCollectionButton"
        android:background="@color/white"
        android:backgroundTint="@color/background"
        app:layout_constraintBottom_toBottomOf="parent"
...
