<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_set"
        android:icon="@drawable/set"
        android:title="@string/title_set"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_collection"
        android:icon="@drawable/collection"
        android:title="@string/title_collection"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile"
        android:title="@string/profile"
        app:showAsAction="ifRoom"/>

</menu>