...
            <!-- 1 строка -->
            <ImageView
                android:id="@+id/ico1"
                android:layout_width="73dp"
                android:layout_height="73dp"
...

            <ImageView
                android:id="@+id/ico2"
                android:layout_width="73dp"
                android:layout_height="73dp"
...

            <ImageView
                android:id="@+id/ico3"
                android:layout_width="73dp"
                android:layout_height="73dp"
...

            <ImageView
                android:id="@+id/ico4"
                android:layout_width="73dp"
                android:layout_height="73dp"
...
            <!-- 2 строка -->
            <ImageView
                android:id="@+id/ico5"
                android:layout_width="73dp"
                android:layout_height="73dp"
...

            <ImageView
                android:id="@+id/ico6"
                android:layout_width="73dp"
                android:layout_height="73dp"
...

            <ImageView
                android:id="@+id/ico7"
                android:layout_width="73dp"
                android:layout_height="73dp"
...

            <ImageView
                android:id="@+id/ico8"
                android:layout_width="73dp"
                android:layout_height="73dp"
...
            <!-- 3 строка -->
            <ImageView
                android:id="@+id/ico9"
                android:layout_width="73dp"
                android:layout_height="73dp"
...

            <ImageView
                android:id="@+id/ico10"
                android:layout_width="73dp"
                android:layout_height="73dp"
...

            <ImageView
                android:id="@+id/ico11"
                android:layout_width="73dp"
                android:layout_height="73dp"
...

            <ImageView
                android:id="@+id/ico12"
                android:layout_width="73dp"
                android:layout_height="73dp"
...
            <!-- 4 строка -->
            <ImageView
                android:id="@+id/ico13"
                android:layout_width="73dp"
                android:layout_height="73dp"
...

            <ImageView
                android:id="@+id/ico14"
                android:layout_width="73dp"
                android:layout_height="73dp"
...

            <ImageView
                android:id="@+id/ico15"
                android:layout_width="73dp"
                android:layout_height="73dp"
...

            <ImageView
                android:id="@+id/ico16"
                android:layout_width="73dp"
                android:layout_height="73dp"
...
            <!-- 5 строка -->
            <ImageView
                android:id="@+id/ico17"
                android:layout_width="73dp"
                android:layout_height="73dp"
...

            <ImageView
                android:id="@+id/ico18"
                android:layout_width="73dp"
                android:layout_height="73dp"
...

            <ImageView
                android:id="@+id/ico19"
                android:layout_width="73dp"
                android:layout_height="73dp"
...

            <ImageView
                android:id="@+id/ico20"
                android:layout_width="73dp"
                android:layout_height="73dp"
...
            <!-- 6 строка -->
            <ImageView
                android:id="@+id/ico21"
                android:layout_width="73dp"
                android:layout_height="73dp"
...

            <ImageView
                android:id="@+id/ico22"
                android:layout_width="73dp"
                android:layout_height="73dp"
...

            <ImageView
                android:id="@+id/ico23"
                android:layout_width="73dp"
                android:layout_height="73dp"
...

            <ImageView
                android:id="@+id/ico24"
                android:layout_width="73dp"
                android:layout_height="73dp"
...
            <!-- 7 строка -->
            <ImageView
                android:id="@+id/ico25"
                android:layout_width="73dp"
                android:layout_height="73dp"
...

            <ImageView
                android:id="@+id/ico26"
                android:layout_width="73dp"
                android:layout_height="73dp"
...

            <ImageView
                android:id="@+id/ico27"
                android:layout_width="73dp"
                android:layout_height="73dp"
...

            <ImageView
                android:id="@+id/ico28"
                android:layout_width="73dp"
                android:layout_height="73dp"
...
            <!-- 8 строка -->
            <ImageView
                android:id="@+id/ico29"
                android:layout_width="73dp"
                android:layout_height="73dp"
...

            <ImageView
                android:id="@+id/ico30"
                android:layout_width="73dp"
                android:layout_height="73dp"
...

            <ImageView
                android:id="@+id/ico31"
                android:layout_width="73dp"
                android:layout_height="73dp"
...

            <ImageView
                android:id="@+id/ico32"
                android:layout_width="73dp"
                android:layout_height="73dp"
...
            <!-- 9 строка -->
            <ImageView
                android:id="@+id/ico33"
                android:layout_width="73dp"
                android:layout_height="73dp"
...

            <ImageView
                android:id="@+id/ico34"
                android:layout_width="73dp"
                android:layout_height="73dp"
...

            <ImageView
                android:id="@+id/ico35"
                android:layout_width="73dp"
                android:layout_height="73dp"
...

            <ImageView
                android:id="@+id/ico36"
                android:layout_width="73dp"
                android:layout_height="73dp"
...
