<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".SignInScreen">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="229dp"
        android:layout_height="200dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/movie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="255dp"
        android:layout_height="66dp"
        android:layout_marginTop="225dp"
        android:src="@drawable/frame_movie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.326">

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="370dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginBottom="18dp"
            android:background="@drawable/border"
            android:hint="@string/email"
            android:maxLength="45"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/light_grey" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="370dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginBottom="18dp"
            android:background="@drawable/border"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="45"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/light_grey" />

        <Button
            android:id="@+id/signInButton"
            android:layout_width="370dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginBottom="18dp"
            android:background="@drawable/button_border_blue"
            android:hint="@string/sign_in"
            android:textColorHint="@color/white"
            android:textSize="17sp" />

        <Button
            android:id="@+id/registerInButton"
            android:layout_width="370dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/border"
            android:hint="@string/register"
            android:textColorHint="@color/blue_buttons"
            android:textSize="17sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>